[tool.poetry]
name = "qr-login-demo"
version = "0.1.0"
description = ""
authors = ["kondounagi <kondounagi@gmail.com>"]
readme = "README.md"
packages = [{include = "qr_login_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
Kivy = {extras = ["base"], version = "^2.1.0"}
fastapi = {extras = ["full"], version = "^0.85.0"}


[tool.poetry.group.dev.dependencies]
pysen = {version = "^0.10.2", extras = ["lint"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py37"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
